Newer JDK (16.0.2) compatibility updates