@@ -146,6 +146,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-war-plugin</artifactId>
+						<version>${maven-war-plugin.version}</version>
 						<configuration>
 							<webResources>
 								<webResource>
@@ -340,6 +341,16 @@
 			<groupId>gov.nist.toolkit</groupId>
 			<artifactId>testkit-utilities</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.gwt/gwt-elemental -->
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-elemental</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-servlet</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
@@ -384,11 +395,6 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-servlet</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
@@ -437,17 +443,20 @@
 			<artifactId>interaction-diagram</artifactId>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.google.gwt/gwt-elemental -->
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-elemental</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+<!--		<dependency>-->
+<!--		<groupId>org.apache.maven.plugins</groupId>-->
+<!--		<artifactId>maven-war-plugin</artifactId>-->
+<!--		<version>${maven-war-plugin.version}</version>-->
+<!--		</dependency>-->
 	</dependencies>
+
+
 
 	<build>
 		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
@@ -469,11 +478,12 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<!-- 2.8.0-01 and later require maven-compiler-plugin 3.1 or higher -->
-				<version>3.1</version>
+				<version>${mavenCompilerPluginVersion}</version>
 				<configuration>
 					<compilerId>groovy-eclipse-compiler</compilerId>
 					<!-- set verbose to be true if you want lots of uninteresting messages -->
 					<!-- <verbose>true</verbose> -->
+					<compilerArgument>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED	--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</compilerArgument>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -566,14 +576,14 @@
 					<modules>
 						<module>${project.groupId}.xdstools2.Xdstools2</module>
 					</modules>
-                                        <extraJvmArgs>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>
+					<extraJvmArgs>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED	--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</extraJvmArgs>
 				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.9.0</version>
 				<configuration>
 					<port>8181</port>
 				</configuration>
@@ -581,7 +591,7 @@
 					<dependency>
 						<groupId>org.apache.maven.doxia</groupId>
 						<artifactId>doxia-module-markdown</artifactId>
-						<version>1.5</version>
+						<version>1.12.0</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -611,6 +621,11 @@
 				</configuration>
 			</plugin>
 			-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${maven-war-plugin.version}</version>
+			</plugin>
 		</plugins>
 		<!-- Begin profile part 2/2 -->
 		<resources>
@@ -643,7 +658,7 @@
 		    <plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.7.1</version>
+				<version>3.12.0</version>
 			</plugin>
 		</plugins>
 	</reporting>
